# mren-rust

./: Cargo.toml  build-MacOS-universal.sh  mren.apple-aarch64  mren.apple-universal  mren.apple-x86_64  mren.linux-aarch64  mren.linux-x86_64  r.mren.linux-arm64  r.mren.linux-x86  r.mren.mac-arm64  r.mren.mac-uni  r.mren.mac-x86
backburner/: main.rs  parse.rs
src/: action.rs  bout de code.txt  locale.rs  main.rs  parse.rs
